src/test/deca/context/valid/typage.deca
// Description:
//    typage float int
//
// Resultats:
//      Incompatible types, must be boolean
// 
// Historique:
//    cree le 01/01/2022

{
    float a=50.51;
    int b=0;
    a=b;
}